--- a/angular.json
+++ b/angular.json
@@ -109,11 +109,60 @@
             "scripts": [],
             "karmaConfig": "karma.conf.js"
           }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "MyRecords:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "MyRecords:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "ct": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "MyRecords:serve",
+            "watch": true,
+            "headless": false,
+            "testingType": "component"
+          },
+          "configurations": {
+            "development": {
+              "devServerTarget": "MyRecords:serve:development"
+            }
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "MyRecords:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "MyRecords:serve:production"
+            }
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "fd73ce3a-1b09-4e6f-bee7-8d1759e1e65d"
+    "analytics": "fd73ce3a-1b09-4e6f-bee7-8d1759e1e65d",
+    "schematicCollections": [
+      "@cypress/schematic",
+      "@schematics/angular"
+    ]
   }
 }
